feat(master): ✨ implement core Stripe payment processing infrastructure
- Add Stripe PHP SDK and React.js packages
- Create PaymentMethod and redesigned Transaction models with enums
- Implement StripeService and PaymentService for payment operations
- Add PaymentMethodController and StripeWebhookController
- Create ProcessStripeWebhook job with idempotency
- Set up payment method management UI components
- Configure Stripe webhook endpoint and CSRF exemption
- Add comprehensive tests for models, services, and controllers
- Update environment configuration and shared props for Stripe keys

--- a/.env.example
+++ b/.env.example
@@ -87,6 +87,11 @@ TWO_FACTOR_OTP_EXPIRY=10
 TWO_FACTOR_RECOVERY_CODE_COUNT=8
 TWO_FACTOR_TOTP_WINDOW=1
 
+# Stripe Payment Gateway
+STRIPE_KEY=pk_test_your_stripe_publishable_key
+STRIPE_SECRET=sk_test_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
 # KYC Verification
 KYC_PROVIDER=manual
 KYC_DEFAULT_JURISDICTION=MY
@@ -99,3 +104,6 @@ ENABLE_OAUTH_AUTH=false
 ENABLE_2FA=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Stripe (Frontend)
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
