--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "*",
         "laravel/tinker": "^2.10.1",
         "pragmarx/google2fa": "^9.0",
+        "stripe/stripe-php": "^15.0",
         "tightenco/ziggy": "^2.0",
         "twilio/sdk": "*"
     },
