--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     },
     "dependencies": {
         "@react-google-maps/api": "^2.20.8",
+        "@stripe/react-stripe-js": "^5.6.0",
+        "@stripe/stripe-js": "^8.8.0",
         "@tailwindcss/typography": "^0.5.19",
         "@tiptap/react": "^3.20.0",
         "@tiptap/starter-kit": "^3.20.0",
